--- a/Dashboardstyle.css
+++ b/Dashboardstyle.css
@@ -48,3 +48,12 @@ h4{
     text-align: center;
 
 }
+#box5{
+    float: left;
+    width: 170px;
+    background-color: lightsteelblue;
+    padding: 20px;
+    margin: 0px 10px 0px 0px;
+    text-align: center;
+
+}
