--- a/Dashboardstyle.css
+++ b/Dashboardstyle.css
@@ -1,3 +1,8 @@
+html, body{
+  margin: 0;
+  padding: 0;
+}
+
 header{
     background: #2F3061;
 }
@@ -51,6 +56,46 @@ h4{
 #box5{
     float: left;
     width: 170px;
+    background-color: lightsteelblue;
+    padding: 20px;
+    margin: 0px 10px 0px 0px;
+    text-align: center;
+
+}
+#box6{
+    float: left;
+    width: 170px;
+    margin-top:50px;
+    background-color: lightsteelblue;
+    padding: 20px;
+    margin: 0px 10px 0px 0px;
+    text-align: center;
+
+}
+#box7{
+    float: left;
+    width: 170px;
+    margin-top:50px;
+    background-color: lightsteelblue;
+    padding: 20px;
+    margin: 0px 10px 0px 0px;
+    text-align: center;
+
+}
+#box8{
+    float: left;
+    width: 170px;
+    margin-top:50px;
+    background-color: lightsteelblue;
+    padding: 20px;
+    margin: 0px 10px 0px 0px;
+    text-align: center;
+
+}
+#box9{
+    float: left;
+    width: 170px;
+    margin-top:50px;
     background-color: lightsteelblue;
     padding: 20px;
     margin: 0px 10px 0px 0px;
